--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ button:focus-visible {
   justify-content: center;
   align-items: center;
   margin-left: 10px;
-  
+
 }
 
 .desc {
@@ -98,7 +98,8 @@ button:focus-visible {
   text-align: center;
   padding-bottom: 100px;
 }
-.abt{
+
+.abt {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -113,10 +114,13 @@ button:focus-visible {
   border-color: #ffffff;
   padding: 2%;
   width: 400px;
-  margin-bottom: 50px; 
-  
+  margin-bottom: 50px;
+  margin-top: 100px;
+  margin-left: 160px;
+
 
 }
+
 .disin {
   border: 2px;
   border-radius: 10%;
@@ -124,11 +128,15 @@ button:focus-visible {
   border-color: #ffffff;
   padding: 7%;
   width: 400px;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
+  margin-top: 120px;
+  margin-left: 100px;
 }
+
 .tf {
   padding: 10px;
 }
+
 
 /* .foot{
   width: 100%;
@@ -136,4 +144,3 @@ button:focus-visible {
   color: #ffffff;
   
 } */
-
